meetily/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetily-backend
  namespace: meetily
spec:
  selector:
    app: meetily-backend
  ports:
    - port: 5167
      targetPort: 5167
---
apiVersion: v1
kind: Service
metadata:
  name: meetily-web-ui
  namespace: meetily
spec:
  selector:
    app: meetily-web-ui
  ports:
    - port: 3119
      targetPort: 3119
